<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/bg"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        >

        <!-- ПУСТОЙ круг -->
        <TextView
            android:id="@+id/faceText"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circle_background"

            android:text="" />

        <!-- ПРОЗРАЧНАЯ строка с ВИДИМЫМ текстом -->
        <EditText
            android:id="@+id/faceInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLength="4"
            android:rotation="90"
            android:text=":0"
            android:textColor="@color/bg"
            android:textSize="120sp"/>

    </FrameLayout>
    <!--
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher_foreground"
        android:background="@android:drawable/dialog_holo_for_text_frame" />
     -->


    <!-- Строка для имени (всегда видна и редактируема) -->
    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/bg"
        android:gravity="center"
        android:hint="Ваше имя"
        android:maxLength="20"
        android:paddingBottom="4dp"
        android:singleLine="true"

        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/for_text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/search"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/for_text"
        android:textColor="@color/bg"
        android:textSize="16sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/contacts"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/for_text"
        android:textColor="@color/bg"
        android:textSize="16sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGroups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/groups"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/for_text"
        android:textColor="@color/bg"
        android:textSize="16sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/for_text"
        android:text="@string/back"
        android:textColor="@color/bg"
        android:textSize="16sp"
        app:cornerRadius="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/for_text"
        android:text="Save profile"
        android:textColor="@color/bg"
        android:textSize="16sp"
        app:cornerRadius="8dp" />


</LinearLayout>